workhorse/gitops/cluster/argocd/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
spec:
  tls:
    - hosts:
        - argocd.dev.local
      secretName: argocd-dev
  ingressClassName: nginx
  rules:
  - host: argocd.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
